--- a/index.html
+++ b/index.html
@@ -263,6 +263,11 @@ input[type="range"]::-moz-range-thumb{
     </div>
 
   </div>
+
+  <div class="footer">
+    <a href="https://freedogski.github.io/reversebase/" target="_blank">https://freedogski.github.io/reversebase/</a>
+  </div>
+  
 </div>
 
 <script>
@@ -402,3 +407,4 @@ update();
 </script>
 </body>
 </html>
+
