--- a/index.html
+++ b/index.html
@@ -184,6 +184,17 @@ input[type="range"]::-moz-range-thumb{
 }
 .arrow-btn:hover{background:#eaf1ff;}
 .arrow-btn:active{background:#dce8ff;}
+
+.footer{
+  margin-top:20px;
+  font-size:12px;
+  text-align:center;
+}
+.footer a{
+  color:#0000ee;
+  text-decoration:none;
+}
+
 </style>
 </head>
 <body>
@@ -407,4 +418,5 @@ update();
 </script>
 </body>
 </html>
+
 
